src/validation/tests/snapshots/rusty__validation__tests__bitaccess_validation_test__reference_direct_access_only_with_ints.snap
---
source: src/validation/tests/bitaccess_validation_test.rs
expression: "&diagnostics"
---
error[E056]: Invalid type LREAL for direct variable access. Only variables of Integer types are allowed
  ┌─ <internal>:7:19
  │
7 │                 c.%Xe;
  │                   ^^^ Invalid type LREAL for direct variable access. Only variables of Integer types are allowed

error[E056]: Invalid type REAL for direct variable access. Only variables of Integer types are allowed
  ┌─ <internal>:8:19
  │
8 │                 c.%Xf;
  │                   ^^^ Invalid type REAL for direct variable access. Only variables of Integer types are allowed
